2010-01-12
- view should center of 'scene' center
  FIXED: resizeEvent now set's the QGraphicsView to look at x,y=0,0
         there is now a resize issue, since a resize will currently reset the views position
         to 0,0 which is not wanted...

2010-01-11
 - BUG: the graphicsview is smaller than the area it visualizes?!
   how to reproduce:
    - compile last commit (not this one)
    - start the program
    - use the cursor keys, it will be able to move the graphicsView some pixels
   FIXED with: 
   void movableGraphicsView::resizeEvent ( QResizeEvent * event ) {
      setSceneRect(QRect(0, 0, width()-6, height()-6));

2010-01-10
 - removed unused gui controlls in mainWidget.ui
 - moved this project to github.com
 - inital cmake support added